--- a/api/package.json
+++ b/api/package.json
@@ -16,11 +16,14 @@
   "description": "",
   "dependencies": {
     "drizzle-orm": "^0.34.1",
+    "drizzle-zod": "^0.5.1",
     "express": "^4.21.1",
+    "lodash": "^4.17.21",
     "pg": "^8.13.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.10",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.25.0",
     "tsx": "^4.19.1",
