--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --import=tsx --watch --env-file=.env src/index.ts",
+    "dev": "cross-env NODE_ENV=dev node --import=tsx --watch --env-file=.env src/index.ts",
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -17,6 +17,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.3",
     "drizzle-orm": "^0.34.1",
     "drizzle-zod": "^0.5.1",
     "express": "^4.21.1",
