--- a/api/package.json
+++ b/api/package.json
@@ -23,14 +23,17 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "pg": "^8.13.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.10",
+    "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.25.0",
     "tsx": "^4.19.1",
