--- a/ecommerce-mobile/package.json
+++ b/ecommerce-mobile/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
+    "@gluestack-ui/alert": "^0.1.15",
     "@gluestack-ui/button": "^1.0.7",
+    "@gluestack-ui/form-control": "^0.1.18",
+    "@gluestack-ui/icon": "^0.1.22",
     "@gluestack-ui/image": "^0.1.10",
+    "@gluestack-ui/input": "^0.1.31",
     "@gluestack-ui/nativewind-utils": "^1.0.25",
     "@gluestack-ui/overlay": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.7",
@@ -22,13 +26,16 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "lucide-react-native": "^0.453.0",
     "nativewind": "4.0.36",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-reanimated": "^3.16.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+    "zustand": "^5.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
