--- a/ecommerce-mobile/package.json
+++ b/ecommerce-mobile/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "DARK_MODE=media expo start --android",
     "ios": "DARK_MODE=media expo start --ios",
-    "web": "DARK_MODE=media expo start --web"
+    "web": "DARK_MODE=media expo start --web",
+    "lint": "npx eslint ."
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
@@ -19,6 +20,7 @@
     "@gluestack-ui/nativewind-utils": "^1.0.25",
     "@gluestack-ui/overlay": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.7",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@tanstack/react-query": "^5.59.15",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
@@ -34,16 +36,19 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^13.4.0",
-    "zustand": "^5.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.13.0",
     "@types/react": "~18.2.45",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "jscodeshift": "^0.15.2",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^8.10.0"
   },
   "private": true
 }
